# wand-ai-backend-test

./: .dockerignore  .env.example  .gitignore  DOCKER_OLLAMA.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.py
alembic/: env.py
alembic/versions/: 001_initial_tables.py
app/: main.py
app/api/: endpoints.py
app/core/: config.py  database.py
app/schemas/: document.py
app/services/: document_processor.py  embedding_service.py  incremental_indexer.py  ingestion_service.py  qa_service.py  search_service.py
app/utils/: large_file_handler.py
